about text alignment fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -329,7 +329,7 @@ footer p {
   font-family: futur;
   color: #f2f2f2;
   padding-left: 15%;
-  padding-right: 20%;
+  padding-right: 15%;
   text-align: center;
 }
 
